Fix layout issues: Remove green text on blue background and move hits per page form inline with button (#107)
* Initial plan

* Fix layout issues: remove green text and improve hits per page positioning


* Move hits per page form to be inline with submit button - remove absolute positioning


* Add 20px spacing to right of hits per page form as requested


* Update bulk_rework.php

---------

--- a/scss/uploader.scss
+++ b/scss/uploader.scss
@@ -194,25 +194,26 @@ body.rex-theme-dark {
     }
 
     .uploader-bulk-rework-num-hits-per-page {
-        position: absolute;
-        right: 0;
-        bottom: 15px;
-        z-index: 1;
-        display: flex;
-        align-items: center;
+        // Removed absolute positioning - now positioned inline with buttons
         .form-group {
             display: flex;
             align-items: center;
             margin: 0;
-            gap: 15px;
+            gap: 10px;
         }
         label {
             margin: 0;
             font-weight: normal;
+            font-size: 13px;
         }
         .form-control {
-            width: 100px;
-            border: 1px solid #{$border-grey}
+            width: 80px;
+            border: 1px solid #{$border-grey};
+            font-size: 13px;
+        }
+        .btn {
+            font-size: 13px;
+            padding: 3px 8px;
         }
     }
 
